changed bin-dir in composer.json

--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
     "autoload": {
         "psr-0": { "": "src/" }
     },
+    "config": {
+        "bin-dir": "."
+    },
     "bin": ["php-cg"]
 }
