--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,8 @@ php:
   - 5.4
   - 5.3
 
-before_script: composer install
+before_script:
+  - curl -s http://getcomposer.org/installer | php
+  - php composer.phar install
+
 script: phpunit --coverage-text
